--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ git pull<br>
         
         });
     </script>
-    <button onclick="dohit(this)"><img></button>
+    <button onclick="dohit(this)"><img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fimages.freeimages.com%2Fimages%2Fpremium%2Fpreviews%2F2476%2F24769905-cartoon-thumbs-up.jpg&imgrefurl=https%3A%2F%2Fwww.freeimages.com%2Ftw%2Fpremium%2Fcartoon-thumbs-up-216148&tbnid=6IFMxA69FRe-7M&vet=12ahUKEwjC5KuK_sr6AhV4z4sBHXViBbMQMygCegUIARDMAQ..i&docid=R-aR5A61_ackEM&w=425&h=439&q=thrumb%20%E5%8D%A1%E9%80%9A&ved=2ahUKEwjC5KuK_sr6AhV4z4sBHXViBbMQMygCegUIARDMAQ"></button>
     點次數:<label id="myhit">2</label><br>
     
     </div>
