--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ git pull<br>
         
         });
     </script>
-    <button onclick="dohit(this)"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freeimages.com%2Ftw%2Fpremium%2Fcartoon-thumbs-up-216148&psig=AOvVaw34J24F6kZH7rUbHPUOYGzq&ust=1665124446393000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCNDDtoH_yvoCFQAAAAAdAAAAABAD"></button>
+    <button onclick="dohit(this)"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.16pic.com%2Fsucai%2F327897.html&psig=AOvVaw1O47XiC7Uj8AbsM-wzPs9o&ust=1665124831320000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCKCT5bD_yvoCFQAAAAAdAAAAABAD"></button>
     點次數:<label id="myhit">2</label><br>
     
     </div>
