--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ git pull<br>
         
         });
     </script>
-    <button onclick="dohit(this)"><img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fimage.16pic.com%2F00%2F93%2F57%2F16pic_9357552_s.png%3FimageView2%2F0%2Fformat%2Fpng&imgrefurl=https%3A%2F%2Fwww.16pic.com%2Fsucai%2F327897.html&tbnid=UZZ-4OzHC5vJKM&vet=12ahUKEwi2vMj7_8r6AhX4z4sBHf0dDPwQMygAegUIARDDAQ..i&docid=yrrZ5k4WmJrE0M&w=310&h=310&q=%E5%A4%A7%E6%8B%87%E6%8C%87%20%E5%8D%A1%E9%80%9A&ved=2ahUKEwi2vMj7_8r6AhX4z4sBHf0dDPwQMygAegUIARDDAQ"></button>
+    <button onclick="dohit(this)"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fzh.lovepik.com%2Fimages%2F619571.html&psig=AOvVaw1O47XiC7Uj8AbsM-wzPs9o&ust=1665124831320000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCKCT5bD_yvoCFQAAAAAdAAAAABAR"></button>
     點次數:<label id="myhit">2</label><br>
     
     </div>
