--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ git pull<br>
         
         });
     </script>
-    <button onclick="dohit(this)"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fnews.gamme.com.tw%2F1392982&psig=AOvVaw18ykHYksHmEhIGssyBpepw&ust=1665124397892000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCIi2vreAy_oCFQAAAAAdAAAAABAD"></button>
+    <button onclick="dohit(this)"><img src="https://img.lovepik.com/element/40038/5590.png_300.png"></button>
     點次數:<label id="myhit">2</label><br>
     
     </div>
