--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ git pull<br>
         
         });
     </script>
-    <button onclick="dohit(this)"><img src="https://img.lovepik.com/element/40038/5590.png_300.png"></button>
+    <button onclick="dohit(this)"><img src="image.png"></button>
     點次數:<label id="myhit">2</label><br>
     
     </div>
