--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ git pull<br>
         
         });
     </script>
-    <button onclick="dohit(this)"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shejihz.com%2Farchives%2F69787%2F&psig=AOvVaw1O47XiC7Uj8AbsM-wzPs9o&ust=1665124831320000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCKCT5bD_yvoCFQAAAAAdAAAAABAa"></button>
+    <button onclick="dohit(this)"><img src="image.png"></button>
     點次數:<label id="myhit">2</label><br>
     
     </div>
