--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ git pull<br>
         
         });
     </script>
-    <button onclick="dohit(this)"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fzh.lovepik.com%2Fimages%2F619571.html&psig=AOvVaw1O47XiC7Uj8AbsM-wzPs9o&ust=1665124831320000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCKCT5bD_yvoCFQAAAAAdAAAAABAf"></button>
+    <button onclick="dohit(this)"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.16pic.com%2Fsucai%2F327897.html&psig=AOvVaw1O47XiC7Uj8AbsM-wzPs9o&ust=1665124831320000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCKCT5bD_yvoCFQAAAAAdAAAAABAk"></button>
     點次數:<label id="myhit">2</label><br>
     
     </div>
