--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ git pull<br>
         
         });
     </script>
-    <button onclick="dohit(this)"><img src="https://photos.google.com/photo/AF1QipNlAICP4pb_VDHgyRd3rGvI8ofT7nT6ZEwQgiFn"></button>
+    <button onclick="dohit(this)"><img src="https://photos.app.goo.gl/5FNXekF55DMy3ft56"></button>
     點次數:<label id="myhit">2</label><br>
     
     </div>
