--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ git pull<br>
         
         });
     </script>
-    <button onclick="dohit(this)"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tukuppt.com%2Fmuban%2Frrmkewvm.html&psig=AOvVaw1O47XiC7Uj8AbsM-wzPs9o&ust=1665124831320000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCKCT5bD_yvoCFQAAAAAdAAAAABA7"></button>
+    <button onclick="dohit(this)"><img src="https://img.tukuppt.com/png_preview/00/04/27/1QTxI3GU9u.jpg!/fw/780"></button>
     點次數:<label id="myhit">2</label><br>
     
     </div>
