--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ div id="copythis">
         
         });
     </script>
-    <button onclick="dohit(this)"><img></button>
+    <button onclick="dohit(this)"><img src="https://img.ixintu.com/upload/jpg/20210615/1a8cf59d4ab801a7659a0653db0701c3_15422_256_294.jpg!con"></button>
     點次數:<label id="myhit">2</label><br>
     
     </div>
