--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
         });
     </script>
-    <button onclick="dohit(this)"><img hight="30px" width="30px" src="https://img.ixintu.com/upload/jpg/20210615/1a8cf59d4ab801a7659a0653db0701c3_15422_256_294.jpg!con"></button>
+    <button onclick="dohit(this)"><img height="30px" width="30px" src="https://img.ixintu.com/upload/jpg/20210615/1a8cf59d4ab801a7659a0653db0701c3_15422_256_294.jpg!con"></button>
     點次數:<label id="myhit">2</label><br>
     
     </div>
