--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <body>
 你好<br>
 哈囉<br>
+<from>
+<input type="submit" value="確定">
+
+</from>
 <div id="copythis">
     <script>
         function httpGet(theUrl) {
