--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <body>
 你好<br>
 哈囉<br>
-<from>
+<from action="mailto:vivian920916@gmail.com">
+姓名:<input type="text"><br>
+email:<input type="text"<br>
 <input type="submit" value="確定">
 
 </from>
