--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 你好<br>
 哈囉<br>
-<from action="mailto:vivian920916@gmail.com">
+<from>
 姓名:<input type="text"><br>
 email:<input type="text"<br>
 <input type="submit" value="確定">
