--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 你好<br>
 哈囉<br>
 <from>
-姓名:<input type="text"><br>
-email:<input type="text"<br>
+我是誰:<input type="text"><br>
+我要說什麼:<input type="text"<br>
 <input type="submit" value="確定">
 
 </from>
