--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 你好<br>
 哈囉<br>
 <from>
-我是誰:<input type="text"><br>
-我要說什麼:<input type="text"<br>
-<input type="submit" value="確定">
+name:<input type="text" id="name" name="name"><br>
+massage:<input type="text"><br>
+<input type="submit" value="確定">tactcommentt" 
 </from>
 <div id="copythis">
     <script>
