--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <from>
 name:<input type="text" id="name" name="name"><br>
 massage:<input type="text"><br>
-<input type="submit" value="確定">tactcommentt" 
+<input type="submit" value="確定"> 
 </from>
 <div id="copythis">
     <script>
