--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <body>
 你好<br>
 哈囉<br>
+<style>
+img {
+height:64px;
+width:64px
+}</style>
 <from>
 name:<input type="text" id="name" name="name"><br>
 massage:<input type="text"><br>
