--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
 <html>
-<head><title>程式設計
-<style>
-img {
-height:64px;
-width:64px
-}</style>
-</title></head>
+<head><title>程式設計</title></head>
 <body>
 你好<br>
 哈囉<br>
